--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body {
     font-family: "Courier New", sans-serif;
     background: white;
     cursor: none;
+    text-decoration: none;
 }
 
 video {
@@ -521,13 +522,39 @@ video {
 
 .border img {
     transition: .5s ease;
-    }
+}
     
-    .border img:hover{
+.border img:hover {
     box-shadow: 0 0 0 10px rgba(131, 80, 80, 0.3);
     transition: .5s ease;
     border-radius: 2vw;
-    }
+}
+
+
+/* CURIOSITIES */
+
+.curiosities {
+    background-color: #DDE3ED;
+    margin-top: -4vw;
+}
+
+.title {
+    padding-top: 10vw;
+    padding-left: 5vw;
+    font-family: Judson;
+    font-size: 1.5vw;
+    padding-bottom: 5vw;
+}
+
+.title h1 {
+    color: #9A8282;
+}
+
+.iconlist img {
+    width: 90vw;
+    margin: auto;
+    display: block;
+}
 
 /* FOOTER */
 
