--- a/index.css
+++ b/index.css
@@ -347,9 +347,9 @@ video {
 .summary_button {
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 2vw;
     background: #9A8282;
-    width: 14vw;
+    margin-left: 40vw;
 }
 
 .summary_button a {
@@ -357,49 +357,14 @@ video {
     position: relative;
     display: flex;
     padding: 1.3vw 4.05vw;
-    border: 2px solid black;
     color: white;
     text-decoration: none;
     font-weight: 500;
     font-size: 1.5vw;
 }
 
-.summary_button a:before {
-    content: '';
-    position: absolute;
-    top: 6px;
-    left: -2px;
-    width: calc(100% + 4px);
-    height: calc(100% - 12px);
-    background: #9A8282;
-    transition: 0.5s ease-in-out;
-    transform: scaleY(1);
-    transition-delay: 0.5s;
-}
-
-.summary_button a:hover:before {
-    transform: scaleY(0);
-}
-
-.summary_button a:after {
-    content: '';
-    position: absolute;
-    left: 6px;
-    top: -2px;
-    height: calc(100% + 4px);
-    width: calc(100% - 12px);
-    background: #9A8282;
-    transition: 0.5s ease-in-out;
-    transform: scaleX(1);
-}
-
-.summary_button a:hover:after {
-    transform: scaleX(0);
-}
-
-.summary_button a span {
-    position: relative;
-    z-index: 3;
+.summary_button:hover {
+    background-color: #b68787;
 }
 
 /* SQUIGGLE */
@@ -463,14 +428,14 @@ video {
     width: 16vw;
     margin-left: 10vw;
     height: 6.5vw;
+    color: #eee;
 }
 
 .projects_button a {
-    font-family: poppins;
+    font-family: Judson;
     position: relative;
     display: flex;
     padding: 1.3vw 4.05vw;
-    border: 2px solid black;
     color: white;
     text-decoration: none;
     font-weight: 500;
@@ -478,7 +443,11 @@ video {
     text-align: center;
 }
 
-.projects_button a:before {
+.projects_button:hover {
+    background-color: #b68787;
+}
+
+/* .projects_button a:before {
     content: '';
     position: absolute;
     top: 6px;
@@ -514,7 +483,7 @@ video {
 .projects_button a span {
     position: relative;
     z-index: 3;
-}
+} */
 
 .slant2 img{
     width: 100vw;
@@ -536,6 +505,7 @@ video {
 .curiosities {
     background-color: #DDE3ED;
     margin-top: -4vw;
+    padding-bottom: 10vw;
 }
 
 .title {
@@ -544,6 +514,7 @@ video {
     font-family: Judson;
     font-size: 1.5vw;
     padding-bottom: 5vw;
+    line-height: 3vw;
 }
 
 .title h1 {
@@ -569,4 +540,13 @@ footer {
     margin-left: 5vw;
     padding-top: 2vw;
     line-height: 2vw;
+}
+
+.projectstitle {
+    margin-bottom: 10vw;
+    line-height: 3vw;
+}
+
+.projectstitle p {
+    margin-bottom: 7vw;
 }
