--- a/projects/projects.css
+++ b/projects/projects.css
@@ -82,7 +82,7 @@ body {
 .description1 {
     width: 40vw;
     padding-left: 10vw;
-    font-family: BloggerSans;
+    font-family: Alegreya Sans;
     line-height: 2.5vw;
     font-size: 1.8vw;
 }
@@ -122,7 +122,7 @@ body {
 .description2 {
     width: 40vw;
     padding-left: 7vw;
-    font-family: BloggerSans;
+    font-family: Alegreya Sans;
     line-height: 2.5vw;
     font-size: 1.8vw;
 }
