main page animation and loader

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -112,6 +112,8 @@ nav a:hover {
     text-align: center;
     padding-top: 5vw;
     font-size: 4vw;
+    font-family: belleza;
+    letter-spacing: 1vw;
 }
 
 /* PROJECT ITEMS */
