--- a/index.css
+++ b/index.css
@@ -1,3 +1,218 @@
+#loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    cursor: auto;
+}
+#loader {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #d0d1d9;
+
+    -webkit-animation: spin 2s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
+    animation: spin 2s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+
+    z-index: 1001;
+}
+
+    #loader:before {
+        content: "";
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        right: 5px;
+        bottom: 5px;
+        border-radius: 50%;
+        border: 3px solid transparent;
+        border-top-color: #8f7272;
+
+        -webkit-animation: spin 3s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
+        animation: spin 3s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+    }
+
+    #loader:after {
+        content: "";
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        right: 15px;
+        bottom: 15px;
+        border-radius: 50%;
+        border: 3px solid transparent;
+        border-top-color: #a8b8d3;
+
+        -webkit-animation: spin 1.5s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
+          animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+    }
+
+    @-webkit-keyframes spin {
+        0%   { 
+            -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(0deg);  /* IE 9 */
+            transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+        100% {
+            -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(360deg);  /* IE 9 */
+            transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+    }
+    @keyframes spin {
+        0%   { 
+            -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(0deg);  /* IE 9 */
+            transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+        100% {
+            -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: rotate(360deg);  /* IE 9 */
+            transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+        }
+    }
+
+    #loader-wrapper .loader-section {
+        position: fixed;
+        top: 0;
+        width: 51%;
+        height: 100%;
+        background: #efefef;
+        z-index: 1000;
+        -webkit-transform: translateX(0);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: translateX(0);  /* IE 9 */
+        transform: translateX(0);  /* Firefox 16+, IE 10+, Opera */
+    }
+
+    #loader-wrapper .loader-section.section-left {
+        left: 0;
+    }
+
+    #loader-wrapper .loader-section.section-right {
+        right: 0;
+    }
+
+    /* Loaded */
+    .loaded #loader-wrapper .loader-section.section-left {
+        -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(-100%);  /* IE 9 */
+                transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
+
+        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
+                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    }
+
+    .loaded #loader-wrapper .loader-section.section-right {
+        -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateX(100%);  /* IE 9 */
+                transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
+
+-webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
+        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    }
+    
+    .loaded #loader {
+        opacity: 0;
+        -webkit-transition: all 0.3s ease-out;  
+                transition: all 0.3s ease-out;
+    }
+    .loaded #loader-wrapper {
+        visibility: hidden;
+
+        -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateY(-100%);  /* IE 9 */
+                transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */
+
+        -webkit-transition: all 0.3s 1s ease-out;  
+                transition: all 0.3s 1s ease-out;
+    }
+    
+    /* JavaScript Turned Off */
+    .no-js #loader-wrapper {
+        display: none;
+    }
+    .no-js h1 {
+        color: #ab4949;
+    }
+
+
+
+
+#container {
+	text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 34.3vw;
+    margin-left: 61.5vw;
+}
+
+#text {
+	display: inline-block;
+	vertical-align: middle;
+	color: rgb(204, 162, 77);
+	letter-spacing: 0.5vw;
+    font-family: Judson;
+    font-size: 2.2vw;
+    font-weight: bolder;
+}
+
+#cursor {
+	display: inline-block;
+	vertical-align: middle;
+	width: 2px;
+	height: 2vw;
+	background-color: black;
+	animation: blink .75s step-end infinite;
+}
+
+.biotext {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 15vw;
+    margin-left: 55vw;
+    display: inline-block;
+	vertical-align: middle;
+	color: rgb(0, 0, 0);
+	letter-spacing: 0.14vw;
+    font-family: belleza;
+    font-size: 2vw;
+}
+
+.biotext h1 {
+    font-weight: lighter;
+    letter-spacing: 1vw;
+    line-height: 8vw;
+    font-size: 6vw;
+    color: rgb(138, 125, 111);
+}
+
+.biotext h3 {
+    margin-left: 2vw;
+    font-weight: lighter;
+    margin-top: 1vw;
+    line-height: 1.7vw;
+}
+
+@keyframes blink {
+	from, to { 
+		background-color: transparent 
+	}
+	30% { 
+		background-color: rgb(204, 162, 77); 
+	}
+}
+  
+
 /* GENERAL */
 
 * {
@@ -12,6 +227,9 @@ body {
     background: white;
     cursor: none;
     text-decoration: none;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
 }
 
 video {
@@ -45,6 +263,58 @@ video {
     color: black;
     transition: all 0.5s ease;
     cursor: none;
+}
+
+/* NAVIGATION */
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    align-items: center;
+    margin: auto;
+    overflow: hidden;
+    font-family: Judson;
+    padding-top: 3vw;
+    padding-right: 2vw;
+    margin-bottom: -2vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 5vw;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    z-index: 1;
+    flex: 1;
+    padding: 1vw;
+    font-size: 20px;
+    flex-wrap: wrap;
+}
+
+nav a {
+    color: black;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: rgb(157, 78, 78);
+    font-size: larger;
+
+}
+
+.logo img {
+    width: 13vw;
+    padding-right: 5vw;
+}
+
+.nav-links li {
+    margin-top: 1vw;
+    font-size: 1.5vw;
+    width: 5vw;
 }
 
 /* GALLERY */
@@ -296,7 +566,7 @@ video {
 
 /* COVER */
 
-.cover img {
+.background {
     width: 100%;
     display: block;
 }
@@ -316,7 +586,7 @@ video {
     justify-content: center;
     align-items: center;
     margin-left: 10vw;
-    margin-top: 10vw;
+    margin-top: 14vw;
 }
 
 .blocker {
@@ -329,7 +599,7 @@ video {
     top: 0;
     left: 0;
     margin-left: 32vw;
-    margin-top: 40.5vw;
+    margin-top: 44.5vw;
 }
 
 /* SUMMARY */
