--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 /* LOADER */
 
 #loader {
-    background: #EFEFEF url(loader.gif) center no-repeat;
+    background: #EFEFEF url(/images/loader.gif) center no-repeat;
     background-size: 20vw;
     height: 100vh;
     width: 100vw;
