--- a/projects/items/dyw.css
+++ b/projects/items/dyw.css
@@ -172,7 +172,7 @@ nav a:hover {
 }
 
 .image2 {
-    width: 40vw;
+    width: 70vw;
     display: block;
     margin: auto;
     margin-top: 10vw;
@@ -301,6 +301,13 @@ video {
 .button3 {
     margin-left: 2vw;
     padding: 1vw 2.8vw;
+}
+
+iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3vw;
 }
 
 /* FOOTER */
