--- a/projects/items/personal.css
+++ b/projects/items/personal.css
@@ -303,6 +303,22 @@ video {
     padding: 1vw 2.8vw;
 }
 
+.iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3vw;
+}
+
+.model {
+    display: block;
+    margin-top: 5vw;
+    height: 35vw;
+    width: 60vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* FOOTER */
 
 footer {
